@@ -24,7 +24,7 @@ eq_or_diff \@test_classes, [ sort keys %methods_for ],
   'get_test_classes() should return a sorted list of test classes';
 
 foreach my $class (@test_classes) {
-    eq_or_diff [ $class->get_test_methods ], $methods_for{$class},
+    eq_or_diff [ $class->new->get_test_methods ], $methods_for{$class},
       "$class should have the correct test methods";
 }
 
@@ -35,12 +35,12 @@ subtest 'test suite' => sub {
 TestsFor::Basic::Subclass->meta->add_method(
     'test_this_will_die' => sub { die 'forced die' },
 );
-my $builder = $test_suite->builder;
+my $builder = $test_suite->configuration->builder;
 $builder->todo_start('testing a dying test');
 my @tests;
 subtest 'test_this_will_die() dies' => sub {
     $test_suite->runtests;
-    @tests = $test_suite->builder->details;
+    @tests = $test_suite->configuration->builder->details;
 };
 $builder->todo_end;
 
